--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>CSS Layout Exercises | display property</title>
-  <meta charset="utf-8">
-  <meta name="description" content="Layout exercise on `display` property for Thinkful's front end web development course">
+  <head>
+    <title>CSS Layout Exercises | display property</title>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Layout exercise on `display` property for Thinkful's front end web development course"
+    />
 
-  <!-- fonts  -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- fonts  -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
 
-  <!-- reset -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <!-- reset -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css"
+    />
 
-  <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
-</body>
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="main.css" />
+  </head>
+  <body>
+    <main role="main">
+      <div class="container">
+        <div class="inner green"></div>
+        <div class="inner blue"></div>
+        <div class="inner gray"></div>
+        <div class="inner black"></div>
+        <div class="inner orange"></div>
+      </div>
+    </main>
+  </body>
 </html>
